# examples

./: .gitignore  README.md  fn-workspace.cue  go.mod  go.sum  ns-workspace.cue  package-lock.json  workspace.secrets
.github/: dependabot.yaml
composetest/: docker-compose.yml  server.cue
django/: README.md
django/01-base/: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  s3_public_access_policy.json  server.cue
django/01-base/infra/localstack/: server.cue
django/01-base/infra/postgres/: server.cue
django/01-base/item/: forms.py  models.py  urls.py  views.py
django/01-base/item/migrations/: 0001_initial.py
django/01-base/item/templates/: form.html  index.html  list.html
django/01-base/scripts/: install_awscli.sh  runserver-docker-compose.sh  runserver.sh
django/01-base/theme/static_src/src/: styles.css
django/01-base/theme/templates/: base.html
django/01-base/todo/: urls.py
django/01-base/todo/settings/: base.py
dockercompose/: README.md
fastify/: README.md  package.json  server.cue
go/: basedir.go  go.mod  go.sum
golang/: README.md
java/: Dockerfile  pom.xml  server.cue
java-spring-boot/: Dockerfile  README.md  pom.xml  schema.sql  server.cue
multitier/: README.md
nextjs/: README.md
py-nosdk/: .gitignore  pyproject.toml
shared/: README.md  demorouter.go
strapi/: README.md
todo_app/: go.mod  go.sum  workspace.ns.textpb
todos/: README.md  fn-workspace.cue  go.mod  go.sum  workspace.ns.textpb
ts-nosdk/: package-lock.json  package.json  tsconfig.json
typescript/: package-lock.json  package.json  (+1 more)
(+323 files in other folders)
